feature: add UIButton

--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -85,7 +85,9 @@
 
     input {}
 
-    button {}
+    button:disabled {
+      @apply bg-ui-gray-disabled text-ui-text-disabled;
+    }
 
     video {}
   }
