--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -32,7 +32,7 @@
   }
 
   .input-focus {
-    @apply focus:outline-none focus:ring-2 focus:ring-cyan-800;
+    @apply focus:outline-none focus:ring-2 focus:ring-ui-purple-secondary;
   }
 
   .input-disabled {
@@ -40,10 +40,11 @@
   }
 
   .input-error {
+    @apply border-red-500 text-red-500;
   }
 
   .button-disabled {
-    @apply disabled:bg-gray-400 disabled:bg-gray-500 disabled:cursor-not-allowed disabled:hover:bg-gray-600;
+    @apply disabled:bg-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-600;
   }
 
   .click-press {
@@ -72,7 +73,9 @@
       @apply text-[20px] leading-[120%] font-medium text-[#2B2735];
     }
 
-    h3 {}
+    h3 {
+      @apply text-[20px] leading-[120%] font-normal;
+    }
 
     h4 {}
 
@@ -80,9 +83,10 @@
       @apply text-base leading-[140%] font-normal text-[#2B2735];
     }
 
-    p.slim {}
 
-    input {}
+    input {
+      @apply border border-black rounded-full h-[56px] placeholder:text-ui-purple-secondary;
+    }
 
     button:disabled {
       @apply bg-ui-gray-disabled text-ui-text-disabled;
